<Tyler> Add SASS to project and introducing new toolbar for main report

--- a/src/app/Loader/loader.component.html
+++ b/src/app/Loader/loader.component.html
@@ -1,5 +1,5 @@
 <router-outlet>
-  <div id="test" *ngIf="showLoader">
+  <div id="loaderContainer" *ngIf="showLoader">
     <div class="loader">
         <div></div>
         <div></div>
