--- a/src/app/Returns/campaign-returns/campaign-returns.component.html
+++ b/src/app/Returns/campaign-returns/campaign-returns.component.html
@@ -1,4 +1,6 @@
 <div class="campaigndiv">
+  <div>
+  <h4>{{MailType?.MailType}}</h4>
   <table class="campaignTable" cellspacing="0" cellpadding="0">
     <thead class='campaignTableHeader' style='text-decoration: underline;'>
       <tr>
@@ -65,4 +67,5 @@
       </tr>
     </tfoot>
   </table>
+</div>
 </div>
