--- a/src/app/Returns/maillist-returns/maillist-returns.component.scss
+++ b/src/app/Returns/maillist-returns/maillist-returns.component.scss
@@ -67,3 +67,14 @@ td, th{
 .phaseTotalFooterIndicator{
     text-align:center;
 }
+
+
+
+/*CSS for jquery slider*/
+
+/* div.slider {
+    display: none;
+} */
+/* table.dataTable tbody td.no-padding {
+    padding: 0;
+} */
