--- a/src/app/Returns/mailtype-returns/mailtype-returns.component.html
+++ b/src/app/Returns/mailtype-returns/mailtype-returns.component.html
@@ -1,4 +1,6 @@
 <div class="mailtypediv">
+  <div>
+  <h3>{{RootReturns?.Client}}</h3>
   <table class="mailTypeTable" cellspacing="0" cellpadding="0">
     <thead class='mailTypeTableHeader' style='text-decoration: underline;'>
       <tr>
@@ -66,4 +68,5 @@
       </tr>
     </tfoot>
   </table>
+</div>
 </div>
