--- a/src/app/Loader/loader.component.scss
+++ b/src/app/Loader/loader.component.scss
@@ -1,4 +1,4 @@
-#test{
+#loaderContainer{
     margin:0;
     position: absolute;
     top: 30%;
@@ -18,17 +18,18 @@
     margin: 0 auto;
 
 }
-.loader > div {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    background: #1279C0;
-    transform: scale(0);
-    transform-origin: center center;
-    animation: loader 1.25s infinite linear;
-    border-radius:3px;
-
+.loader {
+    div{
+        position: relative;
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        background: #1279C0;
+        transform: scale(0);
+        transform-origin: center center;
+        animation: loader 1.25s infinite linear;
+        border-radius:3px;
+    }
 }
 .loader > div:nth-of-type(1), .loader > div:nth-of-type(5), .loader > div:nth-of-type(9) {
     animation-delay: 0.4s;
