--- a/src/app/Returns/campaign-returns/campaign-returns.component.scss
+++ b/src/app/Returns/campaign-returns/campaign-returns.component.scss
@@ -1,43 +1,26 @@
-div.mdetails-control {
+div.cdetails-control {
     background: url('../../resources/plus-solid.svg') no-repeat center center;
-    background-color: green;
+    /* background-color: green; */
     border-radius: 5px;
     color:white;
     cursor: pointer;
-    font-size:10pt;
-    width:20px;
-    height:20px;
+    width:18px;
+    height:18px;
 }
-tr.shown td div.mdetails-control {
-    background: url('../../resources/minus-solid.svg') no-repeat center center;
-    background-color: red;
+tr.shown td div.cdetails-control {
+    background: url('../../resources/chevron-up-solid.svg') no-repeat center center;
+    /* background-color: red; */
     border-radius: 5px;
     color:white;
-    font-size:10pt;
 }
 
-.mailTypeTable{
+.campaignTable{
     width:100%;
-
 }
 
 /*Handles visibility of parent row when a detail row of the datatable is expanded*/
 .hideParentRow {
     visibility: collapse;
-}
-
-/*Removes thin gray border in between rows of table*/
-.table > tbody > tr > td {
-    border-top: none;
-}
-
-/* table.dataTable tbody td.no-padding {
-    padding: 0;
-} */
-
-thead.mailTypeTableHeader th{
-    border:none;
-
 }
 
 td, th{
@@ -50,7 +33,7 @@ td, th{
     width:25px;
     min-width:25px;
  }
- .mailTypeColumn{
+ .campaignColumn{
     width:90px;
     min-width:90px;
     text-align:right;
@@ -61,6 +44,16 @@ td, th{
 }
 .tableSmallColumns{
     min-width:55px;
+    text-align:center;
+}
+
+
+.mailTypeTableFooter{
+    font-weight:bold;
+    /* border-top: 1px solid #333; */
+}
+
+.mailTypeTotalFooterIndicator{
     text-align:center;
 }
 
