--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -1,100 +1,15 @@
-<div class="toolbar">
-  <!-- <div class="col-md-2"> -->
-    <!-- <span style="margin:5px" id='expandAllLists' class='btn btn-sm btn-outline-danger' (click)="ExpandAll()">Expand All</span>
-    <span style="margin:5px" id='collapseAllLists' class='btn btn-sm btn-outline-success' (click)="CollapseAll()">Collapse
-      All</span> -->
-      <button id="toolbarBackBtn" style="width:75px;" class="btn btn-sm" [disabled]="true"><i class="fas fa-chevron-left"></i>Back</button>
-      <div>
-        <button *ngIf="mobileStatus" id="LwidgetScrollBtn" class="btn btn-sm fa fa-chevron-left" (click)="scrollLeft()"></button>
-      <div #widgetContent class="widgetContainer">
-        <button >List Performance</button>
-        <button >Format</button>
-        <button >New Donor</button>
-        <button >List Conversion</button>
-        <button >Doubling Days</button>
-        <button >Donor Lookup</button>
-        <button >Inception Year</button>
-        <button >Recency</button>
-      </div>
-        <button *ngIf="mobileStatus" id="RwidgetScrollBtn" class="btn btn-sm fa fa-chevron-right" (click)="scrollRight()"></button>
-    </div>
-</div>
-<!-- <h1 style="margin-top:100px;">{{ RootReturns?.Client | uppercase }}</h1> -->
-<table style="margin-top:100px;" class="clientTable" cellspacing="0" cellpadding="0">
-  <thead class='clientTableHeader' style='text-decoration: underline;'>
-    <tr>
-      <th></th>
-      <th> Client </th>
-      <th></th>
-      <th>Mailed</th>
-      <th>Caged</th>
-      <th>Quantity</th>
-      <th>Donors</th>
-      <th>Non</th>
-      <th>New</th>
-      <th>RSP</th>
-      <th>AVG</th>
-      <th>Gross</th>
-      <th>Cost</th>
-      <th>Net</th>
-      <th>GPP</th>
-      <th>CLM</th>
-      <th>NLM</th>
-      <th>IO</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td class="btnCol">
-        <div class="details-control"></div>
-      </td>
-      <td>{{ RootReturns?.Client | uppercase }}</td>
-      <td></td>
-      <td>{{ RootReturns?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
-      <td>{{ RootReturns?.Measure.Caged | date: 'MM/dd/yy' }}</td>
-      <td>{{ RootReturns?.Measure.Quantity | number : '1.0-0' }}</td>
-      <td>{{ RootReturns?.Measure.Donors | number : '1.0-0' }}</td>
-      <td>{{ RootReturns?.Measure.NonDonors | number : '1.0-0' }}</td>
-      <td>{{ RootReturns?.Measure.NewDonors | number : '1.0-0' }}</td>
-      <td>{{ RootReturns?.Measure.RSP | percent:'1.2-2'}}</td>
-      <td>{{ RootReturns?.Measure.AVG | number : '1.0-2' }}</td>
-      <td>{{ RootReturns?.Measure.Gross | number : '1.0-0' }}</td>
-      <td>{{ RootReturns?.Measure.Cost | number : '1.0-0' }}</td>
-      <td>{{ RootReturns?.Measure.Net | number : '1.0-0' }}</td>
-      <td>{{ RootReturns?.Measure.GPP | number : '1.0-2' }}</td>
-      <td>{{ RootReturns?.Measure.CLM | number : '1.0-2' }}</td>
-      <td>{{ RootReturns?.Measure.NLM | number : '1.0-2' }}</td>
-      <td>{{ RootReturns?.Measure.IO | number : '1.0-2' }}</td>
-    </tr>
-  </tbody>
-</table>
-<!-- <div style="visibility: collapse"> -->
-<<<<<<< HEAD
-<div>
-  <app-mailtype-returns [RootReturns]="RootReturns" [MailTypeList]="RootReturns?.MailTypeList" title="{{ RootReturns?.Client }}"></app-mailtype-returns>
-  <ng-container *ngFor="let mailType of RootReturns.MailTypeList">
-    <app-campaign-returns [MailType]="mailType" [CampaignList]="mailType?.CampaignList" title="{{ mailType.MailType }}"></app-campaign-returns>
-    <ng-container *ngFor="let campaign of mailType.CampaignList">
-      <app-phase-returns [Campaign]="campaign" [PhaseList]="campaign?.PhaseList" title="{{ campaign.CampaignName }}"></app-phase-returns>
-      <ng-container *ngFor="let phase of campaign.PhaseList;">
-        <app-maillist-returns [MailType]="mailType.MailType" [Phase]="phase" [MailList]="phase?.MailList" title="{{ phase.PhaseName }}"></app-maillist-returns>
-      </ng-container>
-    </ng-container>
-  </ng-container>
-</div>
-<!-- </div> -->
-=======
-  <div>
-    <app-mailtype-returns [RootReturns]="RootReturns" [MailTypeList]="RootReturns?.MailTypeList" title="{{ RootReturns?.Client }}"></app-mailtype-returns>
-    <div *ngFor="let mailType of RootReturns.MailTypeList">
-      <app-campaign-returns [MailType]="mailType" [CampaignList]="mailType?.CampaignList" title="{{ mailType.MailType }}"></app-campaign-returns>
-      <ng-container *ngFor="let campaign of mailType.CampaignList">
-        <app-phase-returns [Campaign]="campaign" [PhaseList]="campaign?.PhaseList" title="{{ campaign.CampaignName }}"></app-phase-returns>
-        <div *ngFor="let phase of campaign?.PhaseList">
-          <app-maillist-returns [MailType]="mailType.MailType" [Phase]="phase" [MailList]="phase?.MailList" title="{{ phase.PhaseName }}"></app-maillist-returns>
-        </div>
-      </ng-container>
-    </div>
-  </div>
-<!-- </div> -->
->>>>>>> bb52bfcadb49b5d64fc751f143aa74b168a1f609
+<div style="margin-top: 100px"></div>
+<div (click)="Alert()"> Test Click...</div>
+<ag-grid-angular 
+    style="width: 1500px; height: 800px;" 
+    class="ag-theme-balham"
+    [enableSorting]="true"
+    [enableFilter]="true"
+    [masterDetail]="true"
+    [rowData]="rowData | async" 
+    [columnDefs]="columnDefs"  
+    [detailCellRendererParams]="MailTypeRender"
+    [groupDefaultExpanded] = "-1"   
+    (gridReady)="onGridReady($event)"  
+    >
+</ag-grid-angular>
