--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,7 @@
 
 @import "~ag-grid/dist/styles/ag-grid.css";
 @import "~ag-grid/dist/styles/ag-theme-balham.css";
+
+.number-cell {
+    text-align: right;
+}
