--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -10,15 +10,24 @@
     [detailCellRendererParams]="MailTypeRender"
     [groupDefaultExpanded] = "-1"   
     (gridReady)="onGridReady($event)"  
-    >
+    > 
 </ag-grid-angular> -->
-<ag-grid-angular 
-    style="width: 90%; height: 90%;" 
+<ag-grid-angular
+    #agGrid
+    style="width: 1800px; height: 900px;"
+    id="myGrid"
+    [rowData]="rowData"
     class="ag-theme-balham"
+    [columnDefs]="columnDefs"
+    [animateRows]="true"
+    [components]="components"
+    [enableRangeSelection]="true"
     [enableSorting]="true"
     [enableFilter]="true"
-    [rowData]="rowData" 
-    [columnDefs]="columnDefs"  
-    (gridReady)="onGridReady($event)"  
-    >
-</ag-grid-angular>
+    [enableColResize]="true"
+    [groupDefaultExpanded] = "-1"  
+    [groupIncludeFooter]="true"
+    [groupIncludeTotalFooter]="true"
+    [suppressAggFuncInHeader]="true"
+    (gridReady)="onGridReady($event)"
+    ></ag-grid-angular>
