--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,8 @@
 
 @import "~ag-grid/dist/styles/ag-grid.css";
 @import "~ag-grid/dist/styles/ag-theme-balham.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 
 .number-cell {
     text-align: right;
