--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -4,71 +4,87 @@
     <ng-container matColumnDef="Client">
         <th mat-header-cell *matHeaderCellDef> Client </th>
         <td mat-cell *matCellDef="let element"> {{element.Client}} </td>
+        <td mat-footer-cell *matFooterCellDef> Total {{ rowData.Client }}  </td>
     </ng-container>
     <ng-container matColumnDef="Mailed">
         <th mat-header-cell *matHeaderCellDef> Mailed </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.Mailed | date:'shortDate'}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="Caged">
         <th mat-header-cell *matHeaderCellDef> Caged </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.Caged | date:'shortDate'}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="Quantity">
         <th mat-header-cell *matHeaderCellDef> Qty </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.Quantity | number}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="Donors">
         <th mat-header-cell *matHeaderCellDef> Don </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.Donors | number}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="NonDonors">
         <th mat-header-cell *matHeaderCellDef> Non </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.NonDonors | number}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="NewDonors">
         <th mat-header-cell *matHeaderCellDef> New </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.NewDonors | number}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="RSP">
         <th mat-header-cell *matHeaderCellDef> RSP </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.RSP | number}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="AVG">
         <th mat-header-cell *matHeaderCellDef> AVG </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.AVG | number}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="Gross">
         <th mat-header-cell *matHeaderCellDef> Gross </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.Gross | currency}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="Cost">
         <th mat-header-cell *matHeaderCellDef> Cost </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.Cost | currency}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="Net">
         <th mat-header-cell *matHeaderCellDef> Net </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.Net | currency}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="GPP">
         <th mat-header-cell *matHeaderCellDef> GPP </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.GPP | currency}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="CLM">
         <th mat-header-cell *matHeaderCellDef> CLM </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.CLM | currency}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="NLM">
         <th mat-header-cell *matHeaderCellDef> NLM </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.NLM | currency}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="IO">
         <th mat-header-cell *matHeaderCellDef> IO </th>
         <td mat-cell *matCellDef="let element"> {{element.Measure.IO | number}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
 
     <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let element" [attr.colspan]="clientDisplayedColumns.length">
-            <div [@detailExpand]="element.expanded ? 'expanded' : 'collapsed'">
+            <div [@detailExpand]="element.Measure.Expanded ? 'expanded' : 'collapsed'">
                 <div style="width:100%">
                     <table mat-table [dataSource]="element.MailTypeList" multiTemplateDataRows>
                         <ng-container matColumnDef="MailType">
@@ -137,7 +153,7 @@
                         </ng-container>
                         <ng-container matColumnDef="expandedDetail">
                             <td mat-cell *matCellDef="let element" [attr.colspan]="mailTypeDisplayedColumns.length">
-                                <div class="example-element-detail" [@detailExpand]="element.expanded ? 'expanded' : 'collapsed'">
+                                <div class="example-element-detail" [@detailExpand]="element.Measure.Expanded ? 'expanded' : 'collapsed'">
                                     <div style="width:100%">
                                         <table mat-table [dataSource]="element.CampaignList" multiTemplateDataRows>
                                             <ng-container matColumnDef="CampaignName">
@@ -220,7 +236,7 @@
                                             </ng-container>
                                             <ng-container matColumnDef="expandedDetail">
                                                 <td mat-cell *matCellDef="let element" [attr.colspan]="campaignDisplayedColumns.length">
-                                                    <div class="example-element-detail" [@detailExpand]="element.expanded ? 'expanded' : 'collapsed'">
+                                                    <div class="example-element-detail" [@detailExpand]="element.Measure.Expanded ? 'expanded' : 'collapsed'">
                                                         <div style="width:100%">
                                                             <table mat-table [dataSource]="element.PhaseList" multiTemplateDataRows>
                                                                 <ng-container matColumnDef="PhaseName">
@@ -305,7 +321,7 @@
                                                                 </ng-container>
                                                                 <ng-container matColumnDef="expandedDetail">
                                                                     <td mat-cell *matCellDef="let element" [attr.colspan]="phaseDisplayedColumns.length">
-                                                                        <div class="example-element-detail" [@detailExpand]="element.expanded ? 'expanded' : 'collapsed'">
+                                                                        <div class="example-element-detail" [@detailExpand]="element.Measure.Expanded ? 'expanded' : 'collapsed'">
                                                                             <div style="width:100%">
                                                                                 <table mat-table [dataSource]="element.MailList" multiTemplateDataRows>
                                                                                     <ng-container matColumnDef="MailCode">
@@ -415,8 +431,8 @@
                                                                     </td>
                                                                 </ng-container>
                                                                 <tr mat-header-row *matHeaderRowDef="phaseDisplayedColumns"></tr>
-                                                                <tr mat-row *matRowDef="let element; columns: phaseDisplayedColumns;" class="example-element-row" [class.example-expanded-row]="expandedElement === element"
-                                                                    (dblclick)="element.expanded = ! element.expanded">
+                                                                <tr mat-row *matRowDef="let element; columns: phaseDisplayedColumns;" class="example-element-row" [class.example-expanded-row]="element.Measure.Expanded"
+                                                                    (dblclick)="element.Measure.Expanded = ! element.Measure.Expanded">
                                                                 </tr>
                                                                 <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
                                                             </table>
@@ -426,8 +442,8 @@
                                             </ng-container>
 
                                             <tr mat-header-row *matHeaderRowDef="campaignDisplayedColumns"></tr>
-                                            <tr mat-row *matRowDef="let element; columns: campaignDisplayedColumns;" class="example-element-row" [class.example-expanded-row]="expandedElement === element"
-                                                (dblclick)="element.expanded = ! element.expanded">
+                                            <tr mat-row *matRowDef="let element; columns: campaignDisplayedColumns;" class="example-element-row" [class.example-expanded-row]="element.Measure.Expanded"
+                                                (dblclick)="element.Measure.Expanded = ! element.Measure.Expanded">
                                             </tr>
                                             <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
                                         </table>
@@ -438,8 +454,8 @@
                         </ng-container>
 
                         <tr mat-header-row *matHeaderRowDef="mailTypeDisplayedColumns"></tr>
-                        <tr mat-row *matRowDef="let element; columns: mailTypeDisplayedColumns;" class="example-element-row" [class.example-expanded-row]="expandedElement === element"
-                            (dblclick)="element.expanded = ! element.expanded">
+                        <tr mat-row *matRowDef="let element; columns: mailTypeDisplayedColumns;" class="example-element-row" [class.example-expanded-row]="element.Measure.Expanded"
+                            (dblclick)="element.Measure.Expanded = ! element.Measure.Expanded">
                         </tr>
                         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
                     </table>
@@ -448,8 +464,9 @@
         </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="clientDisplayedColumns"></tr>
-    <tr mat-row *matRowDef="let element; columns: clientDisplayedColumns;" class="example-element-row" [class.example-expanded-row]="element.expanded"
-        (dblclick)="element.expanded = ! element.expanded">
+    <tr mat-row *matRowDef="let element; columns: clientDisplayedColumns;" class="example-element-row" [class.example-expanded-row]="element.Measure.Expanded"
+        (dblclick)="element.Measure.Expanded = ! element.Measure.Expanded">
     </tr>
     <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+    <tr mat-footer-row *matFooterRowDef="clientDisplayedColumns"></tr>
 </table>
