--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -40,7 +40,7 @@
                 }
             }
             li.mainNavItem:hover{
-                // .navbarDropdownMenu{
+                // .navbarDropdownMenu{ //this is for the dropdown button if needed
                 //     display:block;
                 //     margin-left:-6px;
                 //     margin-top:0px;
@@ -81,7 +81,7 @@
             width:100%;
         }
     }
-    // .navbarDropdownMenu{
+    // .navbarDropdownMenu{   //all of this is for the dropdown button if needed
     //     width:100%;
     // }
     // .navbarDropdownMenu > a{
