--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -1,9 +1,9 @@
-<div class="toolbar">
+<!-- <div class="toolbar"> -->
   <!-- <div class="col-md-2"> -->
     <!-- <span style="margin:5px" id='expandAllLists' class='btn btn-sm btn-outline-danger' (click)="ExpandAll()">Expand All</span>
     <span style="margin:5px" id='collapseAllLists' class='btn btn-sm btn-outline-success' (click)="CollapseAll()">Collapse
       All</span> -->
-      <button id="toolbarBackBtn" style="width:75px;" class="btn btn-sm" [disabled]="true"><i class="fas fa-chevron-left"></i>Back</button>
+      <!-- <button id="toolbarBackBtn" style="width:75px;" class="btn btn-sm" [disabled]="true"><i class="fas fa-chevron-left"></i>Back</button>
       <div>
         <button *ngIf="mobileStatus" id="LwidgetScrollBtn" class="btn btn-sm fa fa-chevron-left" (click)="scrollLeft()"></button>
       <div #widgetContent class="widgetContainer">
@@ -18,9 +18,10 @@
       </div>
         <button *ngIf="mobileStatus" id="RwidgetScrollBtn" class="btn btn-sm fa fa-chevron-right" (click)="scrollRight()"></button>
     </div>
-</div>
+</div> -->
 <!-- <h1 style="margin-top:100px;">{{ RootReturns?.Client | uppercase }}</h1> -->
-<table style="margin-top:100px;" class="clientTable" cellspacing="0" cellpadding="0">
+<!-- <app-toolbar></app-toolbar> -->
+<!-- <table style="margin-top:100px;" class="clientTable" cellspacing="0" cellpadding="0">
   <thead class='clientTableHeader' style='text-decoration: underline;'>
     <tr>
       <th></th>
@@ -67,9 +68,9 @@
       <td>{{ RootReturns?.Measure.IO | number : '1.0-2' }}</td>
     </tr>
   </tbody>
-</table>
+</table> -->
 <!-- <div style="visibility: collapse"> -->
-  <div>
+  <!-- <div>
     <app-mailtype-returns [RootReturns]="RootReturns" [MailTypeList]="RootReturns?.MailTypeList" title="{{ RootReturns?.Client }}"></app-mailtype-returns>
     <div *ngFor="let mailType of RootReturns.MailTypeList">
       <app-campaign-returns [MailType]="mailType" [CampaignList]="mailType?.CampaignList" title="{{ mailType.MailType }}"></app-campaign-returns>
@@ -80,5 +81,11 @@
         </div>
       </ng-container>
     </div>
-  </div>
+  </div> -->
 <!-- </div> -->
+<app-toolbar></app-toolbar>
+
+<!-- <div style="margin-top:200px;"> test</div> -->
+<app-main-returns-toolbox></app-main-returns-toolbox>
+
+
