--- a/src/app/Returns/Toolbox-and-L2/main-returns-toolbox/main-returns-toolbox.component.html
+++ b/src/app/Returns/Toolbox-and-L2/main-returns-toolbox/main-returns-toolbox.component.html
@@ -1,7 +1,7 @@
 <!--<><><><> Note on class control <><><>-->
 <!--<><><><> Put common classes in "class" attribute <><><>-->
 <!--<><><><> Control conditional classes in [ngClass] directive <><><>-->
-<!--<><><><> Otherwise the angular will inconsistently gain/drop classes impromperly <><><>-->
+<!--<><><><> Otherwise angular will inconsistently gain/drop classes impromperly <><><>-->
 
 
 <div (clickOutside)="closeToolbox()">
@@ -52,35 +52,6 @@
           </p>
         </mat-tab>
       </mat-tab-group>
-
-
-
-
-
-
-
-
-        <!-- <input id="tab1" type="radio" name="tabs" checked>
-        <label id="label1" for="tab1">Mailed</label>
-          
-        <input id="tab2" type="radio" name="tabs">
-        <label id="label2" for="tab2">Donors</label>
-
-        <section id="content1">
-            <p>
-              Donizzle doggy auctor maurizzle. Bling bling a tellivizzle izzle nibh pretizzle bizzle. Maecenizzle fo yippiyo. Bizzle fo shizzle my nizzle lacus shizzlin dizzle maurizzle elementum tristique. Nunc rizzle tortizzle sizzle shiznit yo porta. In velit fo shizzle, ultricizzle izzle, for sure quizzle, adipiscing quizzle, its fo rizzle. Etizzle my shizz leo, for sure that's the shizzle, pharetra nizzle, fo shizzle sizzle, turpis. Daahng dawg tellivizzle. Cras lorem. Cool vitae erat ut libero check it out adipiscing. Fusce ac crunk shizznit black ullamcorper brizzle.
-            </p>
-          </section>
-            
-          <section id="content2">
-            <p>
-              Bacon ipsum dolor sit amet landjaeger sausage brisket, jerky drumstick fatback boudin ball tip turducken. Pork belly meatball t-bone bresaola tail filet mignon kevin turkey ribeye shank flank doner cow kielbasa shankle. Pig swine chicken hamburger, tenderloin turkey rump ball tip sirloin frankfurter meatloaf boudin brisket ham hock. Hamburger venison brisket tri-tip andouille pork belly ball tip short ribs biltong meatball chuck. Pork chop ribeye tail short ribs, beef hamburger meatball kielbasa rump corned beef porchetta landjaeger flank. Doner rump frankfurter meatball meatloaf, cow kevin pork pork loin venison fatback spare ribs salami beef ribs.
-            </p>
-            <p>
-              Jerky jowl pork chop tongue, kielbasa shank venison. Capicola shank pig ribeye leberkas filet mignon brisket beef kevin tenderloin porchetta. Capicola fatback venison shank kielbasa, drumstick ribeye landjaeger beef kevin tail meatball pastrami prosciutto pancetta. Tail kevin spare ribs ground round ham ham hock brisket shoulder. Corned beef tri-tip leberkas flank sausage ham hock filet mignon beef ribs pancetta turkey.
-            </p>
-          </section> -->
-
     </div>
   </div>
 </div>
