--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -4,4 +4,5 @@
     </div>
     
     <!--Below is a psuedo clearfix to load all content across all pages below the toolbar-->
-    <div id="psuedoClearFix" [style.margin-top.px]= "clearFixHeight"></div>
+    <div id="psuedoClearFix" [style.height.px]= "clearFixHeight"></div>
+<!--To utilize no background color you can use [style.margin-top.px]-->
