--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-loader></app-loader>
 <app-navigation-bar></app-navigation-bar>
 <router-outlet></router-outlet>
+<div style="height:20px; width:100%;"></div>
